--- a/about.html
+++ b/about.html
@@ -354,7 +354,7 @@
           <div class="footer-contact">
             <h3>Contact Us</h3>
             <p><i class="fas fa-map-marker-alt"></i> Av. Uvira, Gombe, Kinshasa, DRC</p>
-            <p><i class="fas fa-phone"></i> +243 XX XXX XXXX</p>
+            <p><i class="fas fa-phone"></i> +243 98 000 0102</p>
             <p><i class="fas fa-envelope"></i> info@wakengamining.com</p>
             <div class="social-links">
               <a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
